# zahara-v1

./: .dockerignore  .env.example  .env.local  .gitignore  2nd-phase.txt  Diagram.mmd  LICENSE  Makefile  PROJECT_README.md  README.md  TEST_EXECUTION_REPORT.md  docker-compose.override.yml  docker-compose.yml  fly.api.toml  fly.router.toml  fly.toml  init-db.sql  job9c_smoke_test.sh  netlify.toml  pyproject.toml  requirements.txt  sitecustomize.py  test-day2.sh  test-user-scoping.sh  test.db  test_sse_debug.py
.github/: CODEOWNERS
.github/workflows/: ci-and-deploy.yml  ci.yml  flowise-ci.yml  netlify-deploy.yml  zahara-v1.code-workspace
app/: config.py  database.py  main.py
app/middleware/: auth.py  rate_limit.py
app/models/: user.py
app/routers/: agents.py  auth.py  health.py  llm_router.py  vector.py
app/services/: llm_service.py  vector_service.py
apps/agent-custom/: Dockerfile  env.example  package.json
apps/agent-custom/src/: index.ts
apps/agent-demo/: Dockerfile  env.example  package.json
apps/agent-demo/src/: index.ts
apps/dashboard/: Dockerfile  env.example  next.config.js  package.json  playwright.config.ts  tailwind.config.js
apps/dashboard/app/: layout.tsx  page.tsx
apps/dashboard/styles/: globals.css
apps/fastapi-gateway/: Dockerfile  env.example  main.py  requirements.txt
docs/: DEPLOYMENT_CHECKLIST.md  HANDOFF.md  JOB9C_HANDOFF.md  NETLIFY_DEPLOYMENT_GUIDE.md  OBSERVABILITY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  REAL_USAGE_TESTING.md  RUNTIME_INTEGRATION.md  TESTING_GUIDE.md  TESTING_HANDOFF.md  TESTING_SUMMARY.md
frontend/: .env.example  Dockerfile  README.md  netlify.toml  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-netlify-curl.sh
frontend/public/: health.html
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useDashboardMetrics.ts  useTraces.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts  trace.ts
frontend/src/utils/: demoData.ts  formatters.ts
frontend/tests/e2e/: agent-clinic.spec.ts  export-functionality.spec.ts  real-time-updates.spec.ts
infra/: .env.example  Makefile  docker-compose.yml  qdrant.Dockerfile
scripts/: init-db.sql  setup-testing.ps1  setup-testing.sh  test-system.sh  validate-deployment.ps1  validate-deployment.sh
services/api/: .dockerignore  Dockerfile  alembic.ini  fly.api.toml  load_demo_data.py  requirements.txt  seed_data.py  simple_demo_data.py
services/api/alembic/: env.py
services/api/app/: auth.py  compat.py  config.py  database.py  main.py  models.py  sse.py  store.py
services/api/scripts/: load_demo_data.py
services/qdrant/: fly.toml
services/router/: Dockerfile  fly.router.toml  fly.toml  requirements.txt
services/router/app/: main.py
tests/: _http_helpers.py  conftest.py  debug_sse_tables.py  test_agents_yaml.py  test_api_endpoints.py  test_api_health.py  test_api_key_auth.py  test_api_structure.py  test_auth.py  test_auth_comprehensive.py  test_dev_mode.py  test_flowise_contract.py  test_health.py  test_health_comprehensive.py  test_job7_observability.py  test_job9c_auth_and_events.py  test_job9c_budgets_allowlist_runaway.py  test_job9c_cancel_kill.py  test_job9c_day6_comprehensive.py  test_job9c_enforcement.py  test_job9c_integration.py  test_job9c_soak.py  test_job9c_sse_streaming.py  test_rate_limit.py  test_rate_limit_comprehensive.py  test_router.py  test_smoke.py  test_sse_microtest.py  test_vector_sanity.py  test_version_endpoint.py
web/: .env.example  next.config.ts  package-lock.json  package.json  proxy.ts
web/actions/: api.ts
web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
web/app/(app)/: layout.tsx  page.tsx
web/app/(auth)/: layout.tsx
web/app/(job5)/: layout.tsx  page.tsx  providers.tsx
web/app/(private-routes)/: layout.tsx
web/components/: RunOverlay.tsx  ThemeToggle.tsx
web/components/Builders/: BuildersShell.tsx  DemoControls.tsx  DemoStatusPill.tsx  ModeErrorBoundary.tsx  ModeNav.tsx
web/components/Clinic/: Timeline.tsx
web/components/Flow/: Canvas.tsx  Flow.tsx  Inspector.tsx  LeftPanel.tsx  Toolbar.tsx  store.ts  types.ts
web/components/MCP/: Panel.tsx
web/components/Pro/: BuildModal.tsx  (+7 more)
web/hooks/: useBuildersStore.ts  useDemoStore.ts  useEventBus.ts  useFlowStore.ts  useIsGuest.ts  useProStore.ts  useRunStore.ts  useRunUIStore.ts  useSyncContext.ts
web/lib/: auth-cookies.ts  utilities.ts
web/services/: api.ts  job6.ts
web/theme/: tokens.css
zahara-backend/: .gitignore  Diagram.mmd  pyproject.toml
zahara-backend/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
zahara-backend/docs/: FLOWISE_INTEGRATION.md  HANDOFF.md
zahara-backend/infra/: .env.example  Makefile  docker-compose.dev.yml  docker-compose.yml
zahara-backend/tests/: test_api_endpoints.py  test_auth_comprehensive.py  test_flowise_contract.py  test_health_comprehensive.py  test_router.py  test_smoke.py  test_vector_sanity.py  test_version_endpoint.py
(+153 files in other folders)
