[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zahara-v1"
version = "1.0.0"
description = "Zahara.ai FastAPI backend and router services"
authors = [{ name = "Faridul Islam", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # --- Core ---
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.30,<1.0",

    # --- Database / Cache / Vector ---
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "redis>=5.0,<6.0",
    "qdrant-client>=1.9,<2.0",

    # --- Auth / Config / HTTP ---
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "python-multipart>=0.0.9,<0.1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "email-validator>=2.1,<3.0",
    "pyyaml>=6.0,<7.0",

    # --- LLM / AI ---
    "openai>=1.0,<2.0",
    "litellm>=1.40,<2.0",

    # --- Tools / CLI ---
    "typer>=0.12,<1.0",

    # --- Testing ---
    "pytest>=8,<9",
    "pytest-cov>=4,<5",
    "pytest-asyncio>=0.23,<1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24,<25",
    "ruff>=0.5,<1.0",
    "mypy>=1.8,<2.0",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
fix = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --disable-warnings --maxfail=1"
